<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.sbux.wfm.face.punch.activity.MainActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/starbucks" />

    <Button
        android:id="@+id/clockOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/end_shift" />

    <Button
        android:id="@+id/clockIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="95dp"
        android:text="@string/start_shift" />

    <Button
        android:id="@+id/mealOut"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clockOut"
        android:layout_alignParentEnd="true"
        android:text="@string/end_meal" />

    <Button
        android:id="@+id/mealIn"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clockOut"
        android:layout_alignParentStart="true"
        android:text="@string/start_meal" />

    <Button
        android:id="@+id/register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />
</RelativeLayout>