<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.sbux.wfm.face.punch.activity.RegistrationActivity">


    <EditText
        android:id="@+id/lastNameTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="239dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textShortMessage"
        android:singleLine="true" />

    <EditText
        android:id="@+id/firstNameTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/lastNameTextBox"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textShortMessage"
        android:singleLine="true" />

    <EditText
        android:id="@+id/partnerNbrTextBox"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/lastNameTextBox"
        android:layout_marginTop="127dp"
        android:ems="10"
        android:hint="@string/partner_nbr"
        android:inputType="textShortMessage"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="215dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:text="REGISTER"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registerSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/photoRequiredText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:text="SUBMIT" />

    <ImageButton
        android:id="@+id/registerCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/lastNameTextBox"
        android:layout_marginBottom="174dp"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/photoRequiredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="189dp"
        android:layout_marginStart="88dp"
        android:text="@string/photo_required" />

    <Button
        android:id="@+id/registerCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/registerSubmitButton"
        android:layout_toStartOf="@+id/registerSubmitButton"
        android:text="Cancel" />

    <ImageView
        android:id="@+id/sbuxLogo"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo" />

</RelativeLayout>